Added swagger comments to show the correct params on docs
